# markhor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
.github/workflows/: clippy.yml  docker.yaml  test.yml
markdown/: first.md  second.md  test.md
posts/: fancy🤩name.md
src/: lib.rs  livereload.rs  main.rs  markdown.rs  serve.rs  templating.rs  watch.rs
templates/: base.html  hello.html  index.html  post.html
