[package]
name = "rust-templating"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.15.0"
pulldown-cmark = "0.9.1"
simple_logger = "2.1.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
fs_extra = "1.2.0"
