[package]
name = "yanos"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serve", "watch"]
serve = ["rayon", "percent-encoding"]
watch = ["notify"]

[dependencies]
tera = "1.15.0"
pulldown-cmark = "0.9.1"
simple_logger = "2.1.0"
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
fs_extra = "1.2.0"
chrono = "0.4"
clap = { version = "3.0.14", features = ["derive"] }
rayon = { version = "1.5.1", optional = true }
percent-encoding = { version = "2.1.0", optional = true }
notify = { version = "4.0.17", optional = true }
